--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -58,7 +58,7 @@
 	@apply text-gray-500 font-bold md:w-1/6 px-3 flex justify-end;
 }
 .listado {
-	@apply w-full p-1 rounded-md text-gray-600 border-gray-400;
+	@apply w-full p-1 rounded-md text-gray-500 border-gray-400 text-sm;
 }
 
 .normalButton{
